# harn

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  install.sh  package-lock.json  package.json  redocly.yaml
crates/harn-cli/: Cargo.toml  build.rs
crates/harn-cli/portal/: app.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
crates/harn-cli/portal-dist/: index.html
crates/harn-cli/portal/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
crates/harn-cli/src/: a2a.rs  acp.rs  cli.rs  config.rs  env_guard.rs  format.rs  main.rs  package.rs  skill_loader.rs  skill_provenance.rs  test_runner.rs
crates/harn-cli/src/a2a/: card.rs  http.rs  mod.rs  rpc.rs  task.rs  tests.rs
crates/harn-cli/src/acp/: builtins.rs  events.rs  execute.rs  io.rs  mod.rs
crates/harn-cli/src/commands/: agents_conformance.rs  bench.rs  check.rs  connect.rs  connector.rs  contracts.rs  crystallize.rs  doctor.rs  dump_highlight_keywords.rs  dump_trigger_quickref.rs  explain.rs  flow.rs  init.rs  mcp.rs  merge_captain.rs  mod.rs  persona.rs  playground.rs  portal.rs  protocol_conformance.rs  repl.rs  run.rs  serve.rs  skill.rs  skills.rs  test.rs  trace.rs  trust.rs  viz.rs
crates/harn-cli/src/package/: extensions.rs  extensions_tests.rs  lockfile.rs  manifest.rs  mod.rs  package_ops.rs  registry.rs  skills.rs  test_support.rs  validation.rs
crates/harn-cli/tests/: acp_server_cli.rs  burin_mini_playground.rs  check_cli.rs  crystallize_cli.rs  flow_ship_cli.rs  harn_serve_mcp_cli.rs  llm_mock_cli.rs  mcp_server_cli.rs  merge_captain_cli.rs  orchestrator_cli.rs  orchestrator_http.rs  orchestrator_inbox_dedupe.rs  persona_cli.rs  run_exit_codes.rs  trigger_replay_cli.rs
crates/harn-cli/tests/support/: mcp.rs  mod.rs  process.rs
crates/harn-cli/tests/test_util/: mod.rs  process.rs  timing.rs
crates/harn-dap/: Cargo.toml
crates/harn-dap/src/: debugger.rs  host_bridge.rs  main.rs  protocol.rs
crates/harn-dap/src/debugger/: breakpoints.rs  events.rs  mod.rs  sources.rs  state.rs  stepping.rs  tests.rs  variables.rs
crates/harn-fmt/: Cargo.toml
crates/harn-fmt/src/: formatter.rs  helpers.rs  lib.rs  tests.rs
crates/harn-fmt/src/formatter/: comments.rs  decls.rs  expressions.rs  mod.rs  statements.rs
crates/harn-hostlib/: Cargo.toml  README.md
crates/harn-hostlib/data/: code_index_import_rules.json
crates/harn-hostlib/schemas/ast/: bracket_balance.request.json  bracket_balance.response.json  extract_imports.request.json  extract_imports.response.json  function_bodies.request.json  function_bodies.response.json  function_body.request.json  function_body.response.json  outline.request.json  outline.response.json  parse_errors.request.json  parse_errors.response.json  parse_file.request.json  parse_file.response.json  symbol_delete.request.json  symbol_delete.response.json  symbol_extract.request.json  symbol_extract.response.json  symbol_replace.request.json  symbol_replace.response.json  symbols.request.json  symbols.response.json  undefined_names.request.json  undefined_names.response.json
crates/harn-hostlib/schemas/code_index/: agent_heartbeat.request.json  agent_heartbeat.response.json  agent_register.request.json  agent_register.response.json  agent_unregister.request.json  agent_unregister.response.json  changes_since.request.json  changes_since.response.json  current_agent_id.request.json  current_agent_id.response.json  current_seq.request.json  current_seq.response.json  deps_get.request.json  deps_get.response.json  extract_trigrams.request.json  extract_trigrams.response.json  file_hash.request.json  file_hash.response.json  file_ids.request.json  file_ids.response.json  file_meta.request.json  file_meta.response.json  id_to_path.request.json  id_to_path.response.json  importers_of.request.json  importers_of.response.json  imports_for.request.json  imports_for.response.json  lock_release.request.json  (+25 more)
crates/harn-hostlib/src/: error.rs  lib.rs  registry.rs  schemas.rs
crates/harn-hostlib/tests/: ast_builtins.rs  ast_fixtures.rs  ast_function_body_imports.rs  code_index.rs  code_index_live_state.rs  code_index_scenario.rs  fs_watch.rs  process_tools.rs  registration.rs  scanner_e2e.rs  smoke_harn_script.rs  tools_file_io.rs  tools_git.rs  tools_outline.rs  tools_search.rs
crates/harn-ir/: Cargo.toml
crates/harn-ir/src/: lib.rs
crates/harn-lint/: Cargo.toml
crates/harn-lint/src/: complexity.rs  decls.rs  diagnostic.rs  fixes.rs  harndoc.rs  lib.rs  linter.rs  naming.rs  tests.rs
crates/harn-lsp/: Cargo.toml
crates/harn-lsp/src/: call_hierarchy.rs  constants.rs  document.rs  folding.rs  handlers.rs  helpers.rs  main.rs  references.rs  semantic_tokens.rs  symbols.rs
crates/harn-modules/: Cargo.toml
crates/harn-modules/src/: asset_paths.rs  lib.rs  personas.rs  stdlib.rs
crates/harn-serve/: Cargo.toml
crates/harn-serve/src/: adapter.rs  auth.rs  core.rs  error.rs  exports.rs  lib.rs  replay.rs  tls.rs
crates/harn-vm/: Cargo.toml
crates/harn-vm/benches/: flow_predicate_union.rs  flow_store.rs
crates/harn-vm/src/: agent_events.rs  agent_sessions.rs  atomic_io.rs  bridge.rs  bridge_builtins.rs  builtin_id.rs  checkpoint.rs  chunk.rs  compiler.rs  egress.rs  events.rs  http.rs  jsonrpc.rs  lib.rs  llm.rs  llm_config.rs  mcp.rs  mcp_card.rs  mcp_protocol.rs  mcp_registry.rs  mcp_server.rs  metadata.rs  orchestration.rs  personas.rs  process_sandbox.rs  record_filter.rs  runtime_context.rs  runtime_paths.rs  schema.rs  shared_state.rs  shells.rs  stdlib.rs  stdlib_acp.harn  stdlib_agent_state.harn  stdlib_agents.harn  stdlib_async.harn  stdlib_checkpoint.harn  stdlib_collections.harn  stdlib_connectors_github.harn  stdlib_connectors_linear.harn  (+34 more)
crates/harn-vm/tests/: agent_sessions.rs  builtin_registry_alignment.rs  connector_testkit_public_api.rs  flow_backend.rs  tool_ref.rs
crates/harn-wasm/: Cargo.toml  index.html
crates/harn-wasm/src/: lib.rs
crates/harn-wasm/wit/: harn-pure.wit
(+2858 files in other folders)
