[workspace]
members = [
    "crates/harn-lexer",
    "crates/harn-parser",
    "crates/harn-cli",
    "crates/harn-lsp",
    "crates/harn-vm",
    "crates/harn-dap",
    "crates/harn-fmt",
    "crates/harn-lint",
]
# Build harn-wasm separately: cd crates/harn-wasm && wasm-pack build
exclude = ["crates/harn-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
