[workspace]
members = [
    "crates/harn-lexer",
    "crates/harn-parser",
    "crates/harn-cli",
    "crates/harn-lsp",
    "crates/harn-vm",
    "crates/harn-dap",
    "crates/harn-fmt",
    "crates/harn-lint",
]
# Build harn-wasm separately: cd crates/harn-wasm && wasm-pack build
exclude = ["crates/harn-wasm"]
resolver = "2"

[workspace.package]
version = "0.5.18"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burin-labs/harn"
homepage = "https://github.com/burin-labs/harn"
description = "A pipeline-oriented programming language for orchestrating AI coding agents"
keywords = ["ai", "agents", "pipeline", "llm", "language"]
categories = ["compilers", "command-line-utilities"]
