[package]
name = "harn-dap"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harn-dap"
path = "src/main.rs"

[dependencies]
harn-lexer = { path = "../harn-lexer" }
harn-parser = { path = "../harn-parser" }
harn-vm = { path = "../harn-vm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
