[package]
name = "harn-dap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Debug Adapter Protocol implementation for Harn"

[[bin]]
name = "harn-dap"
path = "src/main.rs"

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.3" }
harn-parser = { path = "../harn-parser", version = "0.3" }
harn-vm = { path = "../harn-vm", version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
