[package]
name = "harn-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code formatter for the Harn programming language"

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.4" }
harn-parser = { path = "../harn-parser", version = "0.4" }
