[package]
name = "harn-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linter for the Harn programming language"

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
harn-vm = { path = "../harn-vm", version = "0.7" }
