[package]
name = "harn-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Harn"

[[bin]]
name = "harn-lsp"
path = "src/main.rs"

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.5" }
harn-parser = { path = "../harn-parser", version = "0.5" }
harn-lint = { path = "../harn-lint", version = "0.5" }
harn-fmt = { path = "../harn-fmt", version = "0.5" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
