[package]
name = "harn-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Harn"

[[bin]]
name = "harn-lsp"
path = "src/main.rs"

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
harn-ir = { path = "../harn-ir", version = "0.7" }
harn-lint = { path = "../harn-lint", version = "0.7" }
harn-modules = { path = "../harn-modules", version = "0.7" }
harn-fmt = { path = "../harn-fmt", version = "0.7" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
