[package]
name = "harn-modules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-file module graph and import resolution utilities for Harn"
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

[dev-dependencies]
tempfile = "3"
