[package]
name = "harn-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared outbound workflow server core for Harn adapters"

[dependencies]
async-trait = "0.1"
harn-parser = { path = "../harn-parser", version = "0.7" }
harn-vm = { path = "../harn-vm", version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
time = "0.3"
tracing = "0.1"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
tempfile = "3"
