[package]
name = "harn-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared outbound workflow server core for Harn adapters"

[dependencies]
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
harn-parser = { path = "../harn-parser", version = "0.7" }
harn-vm = { path = "../harn-vm", version = "0.7" }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
time = "0.3"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
tempfile = "3"
