[package]
name = "harn-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async bytecode virtual machine for the Harn programming language"

[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.6" }
harn-parser = { path = "../harn-parser", version = "0.6" }
regex = "1"
serde_json = "1"
rand = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "process", "io-util", "io-std", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
tokio-stream = "0.1"
base64 = "0.22"
sha2 = "0.11"
md-5 = "0.11"
toml = "0.8"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
httpdate = "1"
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", optional = true }
