[package]
name = "harn-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async bytecode virtual machine for the Harn programming language"

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10.4"
croner = "3.0.1"
regex = "1"
serde_json = "1"
rand = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "test-util", "process", "io-util", "io-std", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
tokio-stream = "0.1"
base64 = "0.22"
data-encoding = "2"
hex = "0.4"
sha2 = "0.11"
md-5 = "0.11"
toml = "1.1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
subtle = "2.6"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
httpdate = "1"
ignore = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-json", "reqwest-rustls"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
zeroize = "1"

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tempfile = "3"
