[package]
name = "harn-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async bytecode virtual machine for the Harn programming language"

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-modules = { path = "../harn-modules", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10.4"
croner = "3.0.1"
regex = "1"
serde_json = "1"
rand = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "test-util", "process", "io-util", "io-std", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "multipart", "rustls-tls", "zstd"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rcgen = "0.13"
libc = "0.2"
tokio-stream = "0.1"
base64 = "0.22"
data-encoding = "2"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
sha2 = "0.11"
sha3 = "0.11"
blake3 = "1"
md-5 = "0.11"
csv = "1"
url = "2"
globset = "0.4"
walkdir = "2"
toml = "1.1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
subtle = "2.6"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["v4", "v5", "v7"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
httpdate = "1"
ignore = "0.4"
unicode-normalization = "0.1"
unicode-segmentation = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-json", "reqwest-rustls"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
zeroize = "1"
flate2 = "1.1.9"
zstd = "0.13.3"
brotli = "8.0.2"
tar = { version = "0.4.45", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate-flate2", "flate2"] }
x509-parser = "0.18.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tempfile = "3"
