[package]
name = "harn-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly target for the Harn programming language playground"

[lib]
crate-type = ["cdylib"]

[dependencies]
harn-lexer = { path = "../harn-lexer" }
harn-parser = { path = "../harn-parser" }
harn-fmt = { path = "../harn-fmt" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
