[package]
name = "harn-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly target for the Harn programming language playground"

[lib]
crate-type = ["cdylib"]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.5" }
harn-parser = { path = "../harn-parser", version = "0.5" }
harn-fmt = { path = "../harn-fmt", version = "0.5" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
