[package]
name = "harn-wasm"
version = "0.7.31"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burin-labs/harn"
description = "WebAssembly target for the Harn programming language playground"

[lib]
crate-type = ["cdylib"]

[dependencies]
harn-lexer = { path = "../harn-lexer", version = "0.7" }
harn-parser = { path = "../harn-parser", version = "0.7" }
harn-fmt = { path = "../harn-fmt", version = "0.7" }
wasm-bindgen = "0.2"
serde_json = "1"
